tests/negative/parser/expression.orng
fn main() -> defer 4 {}